allow apple health xml file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
                 <input name='name' id='name' placeholder="Enter your name" />
             </div>
             <div class="input-group">
-                <label for='files'>Select your health data documents</label>
+                <label for='files'>Select your Apple Health data documents in JSON or XML format</label>
                 <input id='files' type="file" multiple>
             </div>
             <button class="submit-btn" type='submit'>Submit</button>
